--- a/QueryCrypter/client/index.html
+++ b/QueryCrypter/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/crazy.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Interpreter</title>
+    <title>Query Crypter</title>
   </head>
   <body>
     <div id="root"></div>
